Todo: Fix the music changes every 5 seconds